<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:id="@+id/dialogSuccess"
    android:minWidth="100sp"
    android:minHeight="100sp">
    <TextView
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_case_title"
        android:textSize="@dimen/_16sdp"
        android:gravity="center"
        android:textColor="#000000"
        android:id="@+id/txtTitle"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_3sdp"/>

    <com.isapanah.awesomespinner.AwesomeSpinner
        android:id="@+id/caseadd_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        app:spinnerDirection="ltr"
        app:spinnerHint="@string/select_title_cancel_case"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/border_bottom"/>
    <TextView
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="@dimen/_15sdp"
        android:gravity="left"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_3sdp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_textview"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:id="@+id/edt_detail"
        android:textSize="@dimen/_15sdp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_10sdp"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/_10sdp"
            android:id="@+id/btn_ok"
            android:background="#73bf45"
            android:textColor="#ffffff"
            android:layout_marginRight="@dimen/_5sdp"
            android:text="@string/cancel_case" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:textSize="@dimen/_10sdp"
            android:id="@+id/btn_cancel"
            android:background="#73bf45"
            android:textColor="#ffffff"
            android:layout_marginLeft="@dimen/_5sdp" />
    </LinearLayout>
</LinearLayout>