<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_350sdp"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_list"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:id="@+id/view">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="@dimen/_55sdp"
                        android:layout_height="@dimen/_3sdp"
                        android:background="@drawable/line_left"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:scaleType="centerInside" />
                    <ImageView
                        android:layout_width="@dimen/_55sdp"
                        android:layout_height="@dimen/_3sdp"
                        android:background="@drawable/line_right"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:scaleType="centerInside" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:id="@+id/layout_title">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/case_note_title"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/_5sdp"/>
                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_close"
                    android:layout_alignParentRight="true"
                    android:id="@+id/img_close"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/hint_text"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <!--<ImageView-->
                <!--android:layout_width="@dimen/_25sdp"-->
                <!--android:layout_height="@dimen/_25sdp"-->
                <!--android:src="@drawable/ic_close"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:id="@+id/img_close"/>-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/border_textview"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_4sdp"
                android:id="@+id/edt_case_note"
                android:text=""
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:layout_below="@+id/txtSend"
                android:gravity="top"
                android:hint="@string/note"
                android:maxLength="500"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sending"
                android:textColor="@color/hint_text"
                android:textStyle="italic"
                android:layout_below="@+id/btn_send"
                android:layout_alignParentRight="true"
                android:id="@+id/txtSend"
                android:layout_marginRight="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/_1sdp"/>
            <Button
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_20sdp"
                android:text="@string/send"
                android:id="@+id/btn_send"
                android:textSize="@dimen/_10sdp"
                android:background="@drawable/border_button_send"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@color/white"
                android:layout_below="@+id/view"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_3sdp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/item_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_180sdp"
                android:scrollbars="vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_below="@+id/layout_title"/>
            <ProgressBar
                android:id="@+id/progressLoading_not_invite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_120sdp"
                android:layout_centerInParent="true"
                android:background="#CCffffff"
                android:visibility="gone"
                android:layout_below="@+id/layout_title"
                android:layout_above="@+id/edt_case_note"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>