<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/caseadd_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/backgroud_all_item"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/draft_files"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_20sdp"
            android:id="@+id/img_back"
            android:src="@drawable/back"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/caseadd_toolbar"
        android:weightSum="1"
        android:orientation="vertical"
        android:background="@color/background_item_date">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/border_bottom"
                android:text="@string/draft_from_server"
                android:id="@+id/txtTitleTop"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:textStyle="normal"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_answers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/white"
                android:dividerHeight="@dimen/_5sdp"
                android:background="@color/background_scroll"
                android:clipToPadding="false"
                android:layout_below="@+id/txtTitleTop"
                android:layout_margin="@dimen/_5sdp"/>
            <ProgressBar
                android:id="@+id/progressLoading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/_130sdp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/border_bottom"
                android:text="@string/draft_from_device"
                android:id="@+id/txtTitleBottom"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:visibility="visible"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_answers_from_device"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/white"
                android:dividerHeight="@dimen/_5sdp"
                android:background="@color/background_scroll"
                android:clipToPadding="false"
                android:layout_below="@+id/txtTitleBottom"
                android:layout_margin="@dimen/_5sdp"/>
            <ProgressBar
                android:id="@+id/progressLoading_from_device"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/_130sdp"
                android:layout_centerInParent="true"
                android:visibility="visible"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>