<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_17sdp"
                android:id="@+id/txtCenter"
                android:background="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/linearLayout2"
                android:background="@android:color/white"
                android:layout_below="@+id/txtCenter">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_weight="1"
                    android:id="@+id/login_ll_logo"
                    android:background="@android:color/white"
                    android:layout_above="@+id/txtCenter"
                    android:paddingBottom="@dimen/_30sdp">
                    <ImageView
                        android:src="@drawable/logo"
                        android:id="@+id/logo_full"
                        android:scaleType="fitCenter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15" />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="70">
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/rounded_edittext_left">
                            <TextView
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="match_parent"
                                android:background="@drawable/rounded_edittext_left" />
                            <ImageView
                                android:src="@drawable/name"
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:padding="0px"
                                android:scaleType="centerInside"
                                android:layout_centerInParent="true"
                                android:layout_margin="@dimen/_5sdp" />
                        </RelativeLayout>
                        <EditText
                            android:id="@+id/login_txt_username"
                            android:textColor="@android:color/black"
                            android:hint="@string/login_name"
                            android:textStyle="normal"
                            android:textSize="@dimen/_11sdp"
                            android:textColorHint="@color/hint_text"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center_horizontal"
                            android:paddingLeft="@dimen/_5sdp"
                            android:background="@drawable/rounded_edittext"
                            android:singleLine="true"
                            android:minLines="1"
                            android:text="" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_15sdp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15" />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="70">
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/rounded_edittext_left">
                            <TextView
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="match_parent"
                                android:background="@drawable/rounded_edittext_left" />
                            <ImageView
                                android:src="@drawable/icon_pass"
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_gravity="center_horizontal"
                                android:scaleType="centerInside"
                                android:layout_centerInParent="true"
                                android:layout_margin="@dimen/_5sdp" />
                        </RelativeLayout>
                        <EditText
                            android:inputType="textPassword"
                            android:id="@+id/login_txt_password"
                            android:textColor="@android:color/black"
                            android:hint="@string/login_password"
                            android:textStyle="normal"
                            android:textSize="@dimen/_11sdp"
                            android:textColorHint="@color/hint_text"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center_horizontal"
                            android:paddingLeft="@dimen/_5sdp"
                            android:background="@drawable/rounded_edittext"
                            android:singleLine="true"
                            android:text="" />
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:text="@string/login"
                    android:id="@+id/login_btn_login"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:background="@drawable/blue_button"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:onClick="onClickLogin"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:id="@+id/txtErrorLogin"
                    android:textColor="#FF0000"
                    android:gravity="bottom|center_horizontal"
                    android:paddingBottom="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/login_ll_logo"
                    android:background="@android:color/white" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/txtVersion"
        android:text=""
        android:textColor="@color/backgroud_all_item"
        android:textSize="@dimen/_10sdp"
        android:layout_margin="@dimen/_3sdp"/>
    <ProgressBar
        android:id="@+id/progressLoading_not_invite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_130sdp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:background="#AA000000"/>
</RelativeLayout>